@@ -16,6 +16,7 @@
         + Files in deleted rows are deleted when the changes are saved
 	+ Fixed some bug whens backing and restore files
 	+ Components can be subModels of the HasMany type
+	+ Added EBox::Types::Text::WriteOnce type
 0.12.100
 	+ EBox::Module::writeConfFile and EBox::Service scape file's path
 	+ Bugfix. Configure logrotate to actually rotate ebox logs
